--- a/index.html
+++ b/index.html
@@ -443,12 +443,13 @@
         // Génération des liens PDF
         function generatePdfLinks() {
             const pdfLinksContainer = document.getElementById('pdf-links');
-            const pdfFolder = 'pdfs/';
-            const pdfFiles = ['Eduroam.pdf', 'Mail.pdf', 'VPN.pdf', 'Contribuer.pdf', 'README.pdf']; // README.pdf is the merged file
+            linksContainer.innerHTML = documents.map(doc => {
+                // Assumes PDF file has the same name as the markdown file, but with .pdf extension
+                const pdfFileName = doc.file.replace('.md', '.pdf');
+                const pdfUrl = `pdfs/${pdfFileName}`; // Path matches the output of generate_pdf.sh
 
-            pdfLinksContainer.innerHTML = pdfFiles.map(file => `
-                <a href="${pdfFolder}${file}" class="pdf-link" download>${file}</a>
-            `).join('');
+                return `<a href="${pdfUrl}" class="pdf-link" target="_blank">${doc.title}</a>`;
+            }).join('');
         }
 
         // Affichage de la page d'accueil
