feat: create the whole guide pdf automatically and change the README

--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                 return `<a href="${pdfUrl}" class="pdf-link" target="_blank">${pdfFileName}</a>`;
             }).join('');
             linksContainer.innerHTML += `
-                <a href="pdfs/README.pdf" class="pdf-link" target="_blank">README.pdf</a>
+                <a href="pdfs/Guide-Complet-TN.pdf" class="pdf-link" target="_blank">Guide-Complet-TN.pdf</a>
             `;
         }
 
