fix: enable header IDs in markdown parsing for fixing internal link

--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
                 }
 
                 const markdownText = await response.text();
-                const htmlContent = marked.parse(markdownText);
+                const htmlContent = marked.parse(markdownText, { headerIds: true });
 
                 contentDiv.innerHTML = htmlContent;
 
